--- a/Entrega 2/style.css
+++ b/Entrega 2/style.css
@@ -1,1 +1,129 @@
-body {background-color: #171718;}
+@media only screen and (max-width: 800px) {
+    .aboutMe {
+        flex-direction: column;
+        align-items: center;
+        width: 80% !important;
+    }
+    .aboutMeImg {
+        width: 100% !important; 
+    }
+    .aboutMeText {
+        width: 100% !important;
+    }
+    .firstTitle{
+        font-size: 40px !important;
+        width: 100% !important;
+    }
+    .proyectoTextPrincipal {
+        font-size: 30px !important;
+    }
+    .proyectoText {
+        font-size: 20px !important;
+    }
+
+    .proyectos2 {
+        justify-content: center;
+        width: fit-content !important;
+        flex-direction: column !important;
+    }
+    .linked {
+        display: none !important;
+    }
+    .accordion {
+        display: block !important;
+    }
+}
+
+.accordion {
+    display: none;
+}
+.footerUl {
+    width: auto;
+}
+.footerLi {
+
+}
+hr {
+    width: 1156px;
+    height: 3.29px;
+
+    /* Bordes */
+    border: 0px;
+
+    background: #26292D;
+}
+.proyectoTextPrincipal {
+    color: white;
+    font-size: 50px;
+}
+.proyectoText {
+    color: white;
+
+    font-size: 30px;
+}
+
+main {
+    width: 100%;
+}
+
+.proyectos {
+    width: 90%;
+    margin: auto;
+}
+
+.proyectos2 {
+    display: flex;
+    justify-content: space-evenly;
+    width: 90%;
+    margin: auto;
+    color: white;
+}
+
+.proyectos2 li {
+    font-size: 13px;
+}
+
+.firstTitle{
+    text-align: center; color: white; width: 50%; margin: 0px auto; line-height: 70px; font-size: 60px;
+}
+.aboutMe {
+    display: flex; width: fit-content; margin: auto; justify-content: space-between; width: 60%; background-color: #1C1E22; border-radius: 20px; padding: 20px; height: fit-content;
+}
+.aboutMeImg {
+    width: 45%;
+}
+.aboutMeText {
+    color: white; font-size: 17px; width: 50%; height: 100%;
+}
+body {
+    background-color: #171718;
+    font-family: 'Poppins';
+        min-width: fit-content;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 32px;
+}
+html {
+    width: 100%;
+}
+.header {
+    display: flex;
+    justify-content: space-evenly;
+    width: 40%;
+    color: white;
+    padding: 10px;
+    
+}
+
+ul {
+    list-style-type: none;
+}
+a {
+    text-decoration: none;
+
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 16px;
+}
