--- a/Entrega 2/style.css
+++ b/Entrega 2/style.css
@@ -1,129 +1,180 @@
-@media only screen and (max-width: 800px) {
-    .aboutMe {
-        flex-direction: column;
-        align-items: center;
-        width: 80% !important;
-    }
-    .aboutMeImg {
-        width: 100% !important; 
-    }
-    .aboutMeText {
-        width: 100% !important;
-    }
-    .firstTitle{
-        font-size: 40px !important;
-        width: 100% !important;
-    }
-    .proyectoTextPrincipal {
-        font-size: 30px !important;
-    }
-    .proyectoText {
-        font-size: 20px !important;
-    }
+.colorized-bg {
+  background: linear-gradient(-45deg, #36558F, #40376E, #48233C, #96ACB7);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 325vh;
+}
 
-    .proyectos2 {
-        justify-content: center;
-        width: fit-content !important;
-        flex-direction: column !important;
-    }
-    .linked {
-        display: none !important;
-    }
-    .accordion {
-        display: block !important;
-    }
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .aboutMe {
+    flex-direction: column;
+    align-items: center;
+    width: 80% !important;
+  }
+  .aboutMeImg {
+    width: auto !important;
+  }
+  .aboutMeText {
+    width: 100% !important;
+  }
+  .firstTitle {
+    font-size: 40px !important;
+    width: 100% !important;
+  }
+  .proyectoTextPrincipal {
+    margin-bottom: 45px !important;
+    font-size: 30px !important;
+  }
+  .proyectoText {
+    font-size: 20px !important;
+  }
+
+  .proyectos2 {
+    justify-content: center;
+    width: fit-content !important;
+    flex-direction: column !important;
+  }
+  .linked {
+    display: none !important;
+  }
+  .accordion {
+    display: block !important;
+  }
 }
 
 .accordion {
-    display: none;
+  display: none;
 }
 .footerUl {
-    width: auto;
+  width: auto;
 }
 .footerLi {
-
 }
 hr {
-    width: 1156px;
-    height: 3.29px;
+  width: 1156px;
+  height: 3.29px;
 
-    /* Bordes */
-    border: 0px;
+  /* Bordes */
+  border: 0px;
 
-    background: #26292D;
+  background: #26292d;
 }
 .proyectoTextPrincipal {
-    color: white;
-    font-size: 50px;
+  color: white;
+  font-size: 50px;
 }
 .proyectoText {
-    color: white;
+  color: white;
 
-    font-size: 30px;
+  font-size: 30px;
 }
 
 main {
-    width: 100%;
-}
-
-.proyectos {
-    width: 90%;
-    margin: auto;
+  width: 100%;
 }
 
 .proyectos2 {
-    display: flex;
-    justify-content: space-evenly;
-    width: 90%;
-    margin: auto;
-    color: white;
+  display: flex;
+  justify-content: space-evenly;
+  width: 90%;
+  margin: auto;
+  color: white;
 }
 
 .proyectos2 li {
-    font-size: 13px;
+  font-size: 18px;
 }
 
-.firstTitle{
-    text-align: center; color: white; width: 50%; margin: 0px auto; line-height: 70px; font-size: 60px;
+.proyectoTextPrincipal,
+.firstTitle {
+  text-align: center;
+  color: white;
+  width: 50%;
+  margin: 0px auto;
+  line-height: 70px;
+  font-size: 60px;
 }
+.proyectos,
 .aboutMe {
-    display: flex; width: fit-content; margin: auto; justify-content: space-between; width: 60%; background-color: #1C1E22; border-radius: 20px; padding: 20px; height: fit-content;
+  display: flex;
+  width: fit-content;
+  margin: auto;
+  margin-top: 45px;
+  margin-bottom: 45px;
+  /* justify-content: space-between; */
+  width: 60%;
+  background-color: #1c1e22;
+  border-radius: 20px;
+  padding: 20px;
+  height: fit-content;
+  text-align: center !important;
 }
 .aboutMeImg {
-    width: 45%;
+  width: 45%;
 }
 .aboutMeText {
-    color: white; font-size: 17px; width: 50%; height: 100%;
+  color: white;
+  font-size: 17px;
+  width: 50%;
+  height: 100%;
 }
 body {
-    background-color: #171718;
-    font-family: 'Poppins';
-        min-width: fit-content;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 32px;
+  background-color: #171718;
+  font-family: "Poppins";
+  min-width: fit-content;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
 }
 html {
-    width: 100%;
+  width: 100%;
 }
 .header {
-    display: flex;
-    justify-content: space-evenly;
-    width: 40%;
-    color: white;
-    padding: 10px;
-    
+  display: flex;
+  justify-content: space-evenly;
+  width: 40%;
+  color: white;
+  padding: 10px;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 16px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 16px;
+}
+
+.BeFactory {
+  width: auto;
+  height: auto;
+}
+
+.nav {
+  background-color: #171718;
+}
+
+.colorized-bg {
+}
+
+li 
+{
+    font-size: 25px;
 }
